--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
 
   <section class="section">
     <div class="container cta-card" style="max-width: 720px; margin:0 auto;">
-      <form class="contact-form">
+      <form class="contact-form" action="https://formspree.io/f/xwpyygpb" method="POST">
+
         <label>
           Name
           <input type="text" name="name" placeholder="Your name" required />
@@ -88,3 +89,4 @@
 
 </body>
 </html>
+
