Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">
-        <span class="logo-mark">DS</span>
-        <span class="logo-text">DigitalStone<span class="logo-text-accent">AI</span></span>
-      </div>
-      <nav class="main-nav">
-        <a href="#services">Services</a>
-        <a href="#what-we-build">What We Build</a>
-        <a href="#case-studies">Case Studies</a>
-        <a href="#about">About</a>
-        <a href="#contact" class="nav-cta">Book Audit</a>
-      </nav>
-      <button class="nav-toggle" aria-label="Toggle navigation">
-        <span></span><span></span>
-      </button>
+  <div class="container header-inner">
+    <div class="logo">
+      <span class="logo-mark">DS</span>
+      <span class="logo-text">DigitalStone<span class="logo-text-accent">AI</span></span>
     </div>
-  </header>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="case-studies.html">Case Studies</a>
+      <a href="about.html">About</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <!-- HERO -->
@@ -351,3 +349,5 @@
   </footer>
 </body>
 </html>
+
+
