Fix HTML formatting and structure in about.html

--- a/about.html
+++ b/about.html
@@ -19,11 +19,12 @@
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="case-studies.html">Case Studies</a>
-      <a href="about.html" class="nav-cta">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="about.html">About</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
     </nav>
   </div>
 </header>
+
 
 <main>
   <!-- HERO -->
@@ -117,3 +118,8 @@
 
 </body>
 </html>
+
+
+</body>
+</html>
+
