Fix HTML encoding issues in services.html

--- a/services.html
+++ b/services.html
@@ -17,13 +17,14 @@
     </div>
     <nav class="main-nav">
       <a href="index.html">Home</a>
-      <a href="services.html" class="nav-cta">Services</a>
+      <a href="services.html">Services</a>
       <a href="case-studies.html">Case Studies</a>
       <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
     </nav>
   </div>
 </header>
+
 
 <main>
   <section class="section">
@@ -127,3 +128,4 @@
 </footer>
 </body>
 </html>
+
