--- a/case-studies.html
+++ b/case-studies.html
@@ -18,12 +18,13 @@
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="case-studies.html" class="nav-cta">Case Studies</a>
+      <a href="case-studies.html">Case Studies</a>
       <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
     </nav>
   </div>
 </header>
+
 
 <main>
 
@@ -124,3 +125,7 @@
 
 </body>
 </html>
+
+</body>
+</html>
+
