--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,15 @@
       <!-- GOOGLE FORM EMBED -->
       <div class="google-form-container">
         <iframe 
-          src="https://docs.google.com/forms/d/e/1FAIpQLSfklpsds_iaadDrRLQnJdTVDVVVmJuvQs2g-MV68Ynbs2PmCQ/viewform?embedded=true"
-          frameborder="0" 
-          marginheight="0" 
-          marginwidth="0">
-        </iframe>
+  src="https://docs.google.com/forms/d/e/1FAIpQLSfklpsds_iaadDrRLQnJdTVDVVVmJuvQs2g-MV68Ynbs2PmCQ/viewform?embedded=true&authuser=0&usp=pp_url"
+  width="100%" 
+  height="1200" 
+  frameborder="0" 
+  marginheight="0" 
+  marginwidth="0">
+Loading…
+</iframe>
+
       </div>
 
       <p class="form-helper" style="text-align:center; margin-top:1rem;">
@@ -104,6 +108,7 @@
 
 </body>
 </html>
+
 
 
 
